--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "assign-3-spotify",
-    "slug": "assign-3-spotify",
+    "name": "assign-4",
+    "slug": "assign-4",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
