--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.2.3",
     "axios": "^0.24.0",
-    "expo": "~44.0.0",
-    "expo-auth-session": "~3.5.0",
-    "expo-random": "~12.1.1",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "expo": "^46.0.10",
+    "expo-auth-session": "~3.7.1",
+    "expo-random": "~12.3.0",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "^0.70.0",
     "react-native-app-auth": "^6.4.0",
-    "react-native-web": "0.17.1"
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
